syntax = "proto3";

option go_package = "github.com/uncommented/pfm/portfolio/upbit";

package upbit;

service UpbitAccount {
  rpc ListInvestments (UpbitAccountRequest) returns (stream UpbitInvestment);
}

message UpbitAccountRequest {
}

message UpbitInvestment {
  string currency = 1;
  string currency_fullname = 2;
  double quantity = 3;
  double average_purchasing_price = 4;
  double purchasing_amount = 5;
  double current_price = 6;
  double evaluation_amount = 7;
  double profit_loss = 8;
  double profit_loss_rate = 9;
}
